test/spec_vectors/simd_f64x2_arith/fail/module_6.wat
(module (func (result v128) (f64x2.mul (i64.const 0) (f64.const 0.0))))